--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     font-size: 1.5rem;
     padding: 1rem;
     text-align: center;
+    flex-grow: 1;
+    flex-shrink: 4;
 }
 .item-1 {
     background-color: #B4BF35;
